중고래->중고거래

--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li class="logo">LOGO</li>
             <li>원룸</li>
-            <li>중고래</li>
+            <li>중고거래</li>
             <li>커뮤니티</li>
         </ul>
     </nav>
