--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+#slack test
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'oneroom/oneroom_index.css' %}">
