--- a/static/oneroom/oneroom_index.css
+++ b/static/oneroom/oneroom_index.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 ul {
     list-style: none;
 }
@@ -6,6 +10,9 @@ h3 {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
 /* Nav Bar */
 nav {
     padding: 20px;
@@ -19,29 +26,35 @@ nav ul {
 
 nav ul li {
     font-size: 25px;
+    opacity: 0.8;
+}
+
+nav ul li:hover {
+    opacity: 1.0;
+    cursor: pointer;
 }
 
 /* Main CONTAINER */
 .mainContainer {
-    margin-top: 20px;
     display: flex;
 }
 
 .myMap {
-    margin-right: 0;
     width: 70vw;
     height: 100vh;
+    border-right: solid 2px black;
 }
 
 /* ITEM LIST */
 .listContainer {
-    width: 30vw;
-    width: 100vh;
-    border: 3px solid black;
+    width: 28.9vw;
+    overflow: auto;
+    max-height: 969px;
 }
 
 .listContainer ul li {
     display: flex;
+    border-bottom: 1px solid black;
 }
 
 
