--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -10,9 +10,9 @@
     <nav>
         <ul>
             <li class="logo">LOGO</li>
-            <li>원룸</li>
-            <li>중고거래</li>
-            <li>커뮤니티</li>
+            <li><a href="#">원룸</a></li>
+            <li><a href="#">중고거래</a></li>
+            <li><a href="#">커뮤니티</a></li>
         </ul>
     </nav>
 
