--- a/static/oneroom/oneroom_index.css
+++ b/static/oneroom/oneroom_index.css
@@ -12,19 +12,17 @@ h3 {
 
 a {
     text-decoration: none;
+    color: black;
 }
 /* Nav Bar */
 nav {
     padding: 20px;
     border-bottom: solid black 2px;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-between;
+    background-color: darkorange;
 }
 
 nav ul li {
+    display: inline-block;
     font-size: 25px;
     opacity: 0.8;
 }
