--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -10,7 +10,7 @@
 <nav>
     <ul>
         <li class="logo">LOGO</li>
-        <li><a href="#">원룸</a></li>
+        <li><a href="{% url 'oneroom_index' %}">원룸</a></li>
         <li><a href="#">중고거래</a></li>
         <li><a href="#">커뮤니티</a></li>
     </ul>
@@ -30,7 +30,7 @@
 </div>
 
 <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=98a0001a3486109fd99e7a58b946cfbe&libraries=clusterer,services"></script>
-<script>
+<script type="text/javascript">
     const container = document.querySelector('.myMap');
     const itemList = document.querySelector('.itemList');
 
@@ -58,24 +58,24 @@
 
     // 마커를 표시할 위치와 해당 정보를 담은 객체 배열
     let positions = [
-            {% if data_list %}
-                {%for data in data_list %}
-                    {
-                        title: '{{ data.title }}',
-                        price: '{{ data.rent_amount }}',
-                        // type: '원룸',
-                        // space: '7평',
-                        latlng: new kakao.maps.LatLng(34.91124654247272, 126.43614580709644), // 원룸 좌표
+        {% if data_list %}
+            {% for data in data_list %}
+                {
+                    title: '{{ data.title }}',
+                    price: '월세 200/35',
+                    type: '원룸',
+                    space: '7평',
+                    latlng: new kakao.maps.LatLng({{ data.latitude }}, {{ data.longitude }}), // 원룸 좌표
 
-                    },
-                {% endfor %}
-            {% endif %}
-        ]
-    ;
+                },
+            {% endfor %}
+        {% endif %}
+
+    ];
 
     const options = {
         center: new kakao.maps.LatLng(34.91124654247272, 126.43614580709644), // 지도의 중심 좌표
-        level: 3 // 지도의 레벨(확대, 축소 정도)
+        level: 5 // 지도의 레벨(확대, 축소 정도)
     };
 
     const map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
@@ -147,7 +147,7 @@
                 <div>
                     <p>
                         <h3>${info.title}</h3>
-                        <span>${info.type}</span>
+                        <span>${info.price}</span>
                         <span>${info.space}</span>
                     </p>
                 </div>
@@ -163,8 +163,8 @@
             SPRITE_MARKER_URL, // 스프라이트 마커 이미지 URL
             markerSize, // 마커의 크기
             {
-                offset: offset, // 마커 이미지에서의 기준 좌표
-                spriteOrigin: spriteOrigin, // 스트라이프 이미지 중 사용할 영역의 좌상단 좌표
+                {#offset: offset, // 마커 이미지에서의 기준 좌표#}
+                {#spriteOrigin: spriteOrigin, // 스트라이프 이미지 중 사용할 영역의 좌상단 좌표#}
                 spriteSize: spriteImageSize // 스프라이트 이미지의 크기
             }
         );
@@ -186,7 +186,7 @@
                 <div>
                     <p>
                         <h3>${info.title}</h3>
-                        <span>${info.price}원</span>
+                        <span>${info.price}</span>
                         <span>${info.space}</span>
                     </p>
                 </div>
@@ -195,8 +195,6 @@
     `
         item.innerHTML = roomInfo;
     }
-
-
 </script>
 </body>
 </html>
