chat base extends

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li class="logo">LOGO</li>
+        <li class="logo">toch</li>
         <li><a href="{% url 'oneroom:index' %}">원룸</a></li>
         <li><a href="#">중고거래</a></li>
         <li><a href="#">커뮤니티</a></li>
