--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -5,14 +5,30 @@
         td {
             width: 12.5%;
         }
+
+        .roomImageContainer {
+            height: 400px;
+            box-sizing: border-box;
+        }
+
+        .roomImage {
+            border: solid 1px black;
+            float: left;
+            width: 50%;
+            height: 50%;
+
+            text-align: center;
+            line-height: 200px;
+        }
     </style>
+
     <table class="table table-bordered">
         <tbody>
         <tr>
             <td colspan="2">월세 200 / {{ data.first.rent_amount }}원</td>
             <td colspan="2">면적 10평</td>
             <td colspan="6">40만원
-                <button type="button" class="btn btn-outline-secondary" style="float:right">연락처보기</button>
+                <button type="button" class="btn btn-outline-secondary show_contact"  style="float:right">연락처보기</button>
             </td>
         </tr>
         <tr>
@@ -57,4 +73,11 @@
         </tr>
         </tbody>
     </table>
+
+    <div class="roomImageContainer">
+        <div class="roomImage">사진</div>
+        <div class="roomImage">사진</div>
+        <div class="roomImage">사진</div>
+        <div class="roomImage">더보기</div>
+    </div>
 {% endblock %}
