--- a/templates/usedtrade/detail.html
+++ b/templates/usedtrade/detail.html
@@ -38,97 +38,6 @@
                                         </div>
                                     </a></div>
                                 </div>
-                                <div class="slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1"
-                                     role="tabpanel" id="slick-slide01" style="width: 729px;">
-                                    <div><a href="/images?image_index=1&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
-                                        <div>
-                                            <div class="image-wrap" data-image-id="1189881619" data-image-index="2">
-                                                <img data-lazy="https://dnvefa72aowie.cloudfront.net/origin/article/202110/ABDD377A9489CFFDAFEC6F841DB964D7C1CC382BD38BF57D3C8EA8120776652F.jpg?q=95&amp;s=1440x1440&amp;t=inside"
-                                                     class="portrait" alt="스캇 MTB 산악자전거의 사진 2"
-                                                     src="https://dnvefa72aowie.cloudfront.net/hoian/category/thumbnails/v2/img_thumb_sports.png">
-                                            </div>
-                                        </div>
-                                    </a></div>
-                                </div>
-                                <div class="slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1"
-                                     role="tabpanel" id="slick-slide02" style="width: 729px;">
-                                    <div><a href="/images?image_index=2&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
-                                        <div>
-                                            <div class="image-wrap" data-image-id="1189881618" data-image-index="3">
-                                                <img data-lazy="https://dnvefa72aowie.cloudfront.net/origin/article/202110/DF78F62B38D3F8246498A3C42546A3EB2BB376B1FA421D54E37EE757EC7B4FE0.jpg?q=95&amp;s=1440x1440&amp;t=inside"
-                                                     class="portrait" alt="스캇 MTB 산악자전거의 사진 3"
-                                                     src="https://dnvefa72aowie.cloudfront.net/hoian/category/thumbnails/v2/img_thumb_sports.png">
-                                            </div>
-                                        </div>
-                                    </a></div>
-                                </div>
-                                <div class="slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1"
-                                     role="tabpanel" id="slick-slide03" style="width: 729px;">
-                                    <div><a href="/images?image_index=3&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
-                                        <div>
-                                            <div class="image-wrap" data-image-id="1189881616" data-image-index="4">
-                                                <img data-lazy="https://dnvefa72aowie.cloudfront.net/origin/article/202110/E553675C8C682EEDE8436F17B9851AFB99F927D32F5699E90A0AC76B5CBB72F2.jpg?q=95&amp;s=1440x1440&amp;t=inside"
-                                                     class="portrait" alt="스캇 MTB 산악자전거의 사진 4"
-                                                     src="https://dnvefa72aowie.cloudfront.net/hoian/category/thumbnails/v2/img_thumb_sports.png">
-                                            </div>
-                                        </div>
-                                    </a></div>
-                                </div>
-                                <div class="slick-slide slick-cloned" data-slick-index="4" aria-hidden="true"
-                                     tabindex="-1" style="width: 729px;">
-                                    <div><a href="/images?image_index=0&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
-                                        <div>
-                                            <div class="image-wrap" data-image-id="1189881617" data-image-index="1">
-                                                <img data-lazy="https://dnvefa72aowie.cloudfront.net/origin/article/202110/2A7C46274741BA8BCA35BAFDCA408013B5D32A6EA01BE303BA00EBE86E18E151.jpg?q=95&amp;s=1440x1440&amp;t=inside"
-                                                     class="landscape" alt="스캇 MTB 산악자전거의 사진 1"
-                                                     src="https://dnvefa72aowie.cloudfront.net/hoian/category/thumbnails/v2/img_thumb_sports.png">
-                                            </div>
-                                        </div>
-                                    </a></div>
-                                </div>
-                                <div class="slick-slide slick-cloned" data-slick-index="5" aria-hidden="true"
-                                     tabindex="-1" style="width: 729px;">
-                                    <div><a href="/images?image_index=1&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
-                                        <div>
-                                            <div class="image-wrap" data-image-id="1189881619" data-image-index="2">
-                                                <img data-lazy="https://dnvefa72aowie.cloudfront.net/origin/article/202110/ABDD377A9489CFFDAFEC6F841DB964D7C1CC382BD38BF57D3C8EA8120776652F.jpg?q=95&amp;s=1440x1440&amp;t=inside"
-                                                     class="portrait" alt="스캇 MTB 산악자전거의 사진 2"
-                                                     src="https://dnvefa72aowie.cloudfront.net/hoian/category/thumbnails/v2/img_thumb_sports.png">
-                                            </div>
-                                        </div>
-                                    </a></div>
-                                </div>
-                                <div class="slick-slide slick-cloned" data-slick-index="6" aria-hidden="true"
-                                     tabindex="-1" style="width: 729px;">
-                                    <div><a href="/images?image_index=2&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
-                                        <div>
-                                            <div class="image-wrap" data-image-id="1189881618" data-image-index="3">
-                                                <img data-lazy="https://dnvefa72aowie.cloudfront.net/origin/article/202110/DF78F62B38D3F8246498A3C42546A3EB2BB376B1FA421D54E37EE757EC7B4FE0.jpg?q=95&amp;s=1440x1440&amp;t=inside"
-                                                     class="portrait" alt="스캇 MTB 산악자전거의 사진 3"
-                                                     src="https://dnvefa72aowie.cloudfront.net/hoian/category/thumbnails/v2/img_thumb_sports.png">
-                                            </div>
-                                        </div>
-                                    </a></div>
-                                </div>
-                                <div class="slick-slide slick-cloned" data-slick-index="7" aria-hidden="true"
-                                     tabindex="-1" style="width: 729px;">
-                                    <div><a href="/images?image_index=3&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
-                                        <div>
-                                            <div class="image-wrap" data-image-id="1189881616" data-image-index="4">
-                                                <img class="portrait" alt="스캇 MTB 산악자전거의 사진 4"
-                                                     src="https://dnvefa72aowie.cloudfront.net/origin/article/202110/E553675C8C682EEDE8436F17B9851AFB99F927D32F5699E90A0AC76B5CBB72F2.jpg?q=95&amp;s=1440x1440&amp;t=inside"
-                                                     style="opacity: 1;">
-                                            </div>
-                                        </div>
-                                    </a></div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -160,7 +69,7 @@
         <section id="article-description">
             <h1 property="schema:name" id="article-title" style="margin-top:0px;">스캇 MTB 산악자전거</h1>
             <p id="article-category">
-d                <time>
+                <time>
                     1시간 전
                 </time>
             </p>
