--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -4,69 +4,77 @@
 {% block content %}
     <style>
 
-    .container {
-        margin: 0 auto;
-    }
-    .trade_ul {
-        margin-top: 10px;
-    }
+        .container {
+            margin: 0 auto;
+        }
 
-    .trade_ul li {
-        float: left;
-        width: 200px;
-        height: 200px;
-        margin: 10px;
-    }
+        .trade_ul {
+            margin-top: 10px;
+        }
 
-    .trade_image {
-        border: 1px solid black;
-        width: 100%;
-        height: 60%;
-    }
-    .trade_content {
-        width: 100%;
-        height: 40%;
+        .trade_ul li {
+            float: left;
+            width: 200px;
+            height: 200px;
+            margin: 10px;
+        }
 
-    }
-</style>
-<div class="container">
-    <ul class="trade_ul">
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-        <li class="trade_li">
-            <div class="trade_image"></div>
-            <div class="trade_content">내용</div>
-        </li>
-    </ul>
-</div>
+        .trade_image {
+            border: 1px solid black;
+            width: 100%;
+            height: 60%;
+        }
+
+        .trade_content {
+            width: 100%;
+            height: 10%;
+
+        }
+
+        .trade_price {
+            width: 100%;
+            height: 30%;
+        }
+    </style>
+    <div class="container">
+        <ul class="trade_ul">
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+                <div class="trade_price">30,000원</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+            <li class="trade_li">
+                <div class="trade_image"></div>
+                <div class="trade_content">내용</div>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
