nevbar에서 중거거래 클릭시 이동

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
     <ul>
         <li class="logo">toch</li>
         <li><a href="{% url 'oneroom:index' %}">원룸</a></li>
-        <li><a href="#">중고거래</a></li>
+        <li><a href="{% url 'usedtrade:index' %}">중고거래</a></li>
         <li><a href="#">커뮤니티</a></li>
     </ul>
 </nav>
