usedtrade create_post

--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -77,4 +77,5 @@
             </li>
         </ul>
     </div>
+    <button onclick="location.href='{% url 'usedtrade:create_post' %}'" class="btn btn-outline-secondary">글쓰기</button>
 {% endblock %}
