usedtrade index 반복문 추가

--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -38,43 +38,16 @@
     </style>
     <div class="container">
         <ul class="trade_ul">
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-                <div class="trade_price">30,000원</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
-            <li class="trade_li">
-                <div class="trade_image"></div>
-                <div class="trade_content">내용</div>
-            </li>
+            {% for data in data %}
+                <li class="trade_li" onclick="location.href='{% url 'usedtrade:detail' data.id %}'">
+                    <div class="trade_image">
+                        <img src="https://dnvefa72aowie.cloudfront.net/origin/article/202110/2A7C46274741BA8BCA35BAFDCA408013B5D32A6EA01BE303BA00EBE86E18E151.jpg?q=95&amp;s=1440x1440&amp;t=inside"
+                             style="width: 200px; height: 120px;">
+                    </div>
+                    <div class="trade_content">{{ data.title }}</div>
+                    <div class="trade_price">{{ data.price }}원</div>
+                </li>
+            {% endfor %}
         </ul>
     </div>
     <button onclick="location.href='{% url 'usedtrade:create_post' %}'" class="btn btn-outline-secondary">글쓰기</button>
