--- a/templates/usedtrade/create_post.html
+++ b/templates/usedtrade/create_post.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <form>
+    <form action="{% url 'usedtrade:create_post' %}" method="post">
+        {% csrf_token %}
         <br>
         <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+            <textarea class="form-control" placeholder="Leave a comment here" name="title"></textarea>
             <label for="floatingTextarea">제목</label>
         </div>
         <br>
         <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+            <textarea class="form-control" placeholder="Leave a comment here" name="price"></textarea>
             <label for="floatingTextarea">판매가격</label>
         </div>
         <br>
@@ -19,7 +20,7 @@
         </div>
         <br>
         <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+            <textarea class="form-control" placeholder="Leave a comment here" name="content"
                       style="height: 100px"></textarea>
             <label for="floatingTextarea2">Comments</label>
         </div>
