--- a/templates/usedtrade/detail.html
+++ b/templates/usedtrade/detail.html
@@ -14,8 +14,7 @@
                                  style="opacity: 1; width: 6561px; transform: translate3d(-729px, 0px, 0px);">
                                 <div class="slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true"
                                      tabindex="-1" style="width: 729px;">
-                                    <div><a href="/images?image_index=3&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="-1">
+                                    <div>
                                         <div>
                                             <div class="image-wrap" data-image-id="1189881616" data-image-index="4">
                                                 <img data-lazy="https://dnvefa72aowie.cloudfront.net/origin/article/202110/E553675C8C682EEDE8436F17B9851AFB99F927D32F5699E90A0AC76B5CBB72F2.jpg?q=95&amp;s=1440x1440&amp;t=inside"
@@ -23,12 +22,11 @@
                                                      src="https://dnvefa72aowie.cloudfront.net/hoian/category/thumbnails/v2/img_thumb_sports.png">
                                             </div>
                                         </div>
-                                    </a></div>
+                                    </div>
                                 </div>
                                 <div class="slick-slide slick-current slick-active" data-slick-index="0"
                                      aria-hidden="false" role="tabpanel" id="slick-slide00" style="width: 729px;">
-                                    <div><a href="/images?image_index=0&amp;object_id=295261694&amp;object_type=Article"
-                                            style="width: 100%; display: inline-block;" tabindex="0">
+                                    <div>
                                         <div>
                                             <div class="image-wrap" data-image-id="1189881617" data-image-index="1">
                                                 <img class="landscape" alt="스캇 MTB 산악자전거의 사진 1"
@@ -36,7 +34,7 @@
                                                      style="opacity: 1;">
                                             </div>
                                         </div>
-                                    </a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -67,24 +65,20 @@
             </a></section>
 
         <section id="article-description">
-            <h1 property="schema:name" id="article-title" style="margin-top:0px;">스캇 MTB 산악자전거</h1>
+            <h1 property="schema:name" id="article-title" style="margin-top:0px;">{{ data.first.title }}</h1>
             <p id="article-category">
                 <time>
-                    1시간 전
+                    {{ data.first.created_date }}
                 </time>
             </p>
             <p property="schema:priceValidUntil" datatype="xsd:date" content="2023-10-05"></p>
             <p rel="schema:url" resource="https://www.daangn.com/295261694"></p>
             <p property="schema:priceCurrency" content="KRW"></p>
             <p id="article-price" property="schema:price" content="150000.0" style="font-size:18px; font-weight:bold;">
-                150,000원
+                {{ data.first.price }}원
             </p>
             <div property="schema:description" id="article-detail">
-                <p>스캇 산악자전거입니다.
-                    <br>산악 자전거 사놓고 학원 왔다갔다 할때만 잘탔습니다..! 사용감은 조금 있지만 정말 잘나갑니다!!
-                    <br>기어는 21단이고 사이즈는 27.5인치 입니다
-                    <br>직접 가지러 오셔야해요
-                    <br>편하게 연락주세요..!!</p>
+                {{ data.first.content }}
             </div>
         </section>
     </article>
