중고거래 글삭제 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
           integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!-- pybo CSS -->
     <link rel="stylesheet" href="{% static 'oneroom/oneroom_index.css' %}">
-    <title>인중딱대</title>
+    <title>Toch</title>
 </head>
 <body>
 {% include "navbar.html" %}
