--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -55,7 +55,6 @@
                     },
                 {% endfor %}
             {% endif %}
-
         ];
 
         const options = {
@@ -158,7 +157,7 @@
         // 리스트에 들어갈 요소들을 묶어서 한번에 반환하는 함수
         function roomListItem(info) {
             return `
-                    <a onclick="location.href='detail/' + ${info.id}">
+                    <a onclick="location.href=${info.id}">
                         <li>
                             <div style="margin-right:30px"><img width="80px" height="80ox" src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markers_sprites2.png" alt="This is a preview image of the room."></div>
                             <div>
