oneroom/detail modal update

--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -114,7 +114,7 @@
             height: 80px;
         }
 
-        /* MODAL */
+         /* MODAL */
         .modal_window {
             position: fixed;
             top: 0;
@@ -139,29 +139,54 @@
 
         .btn {
             background-color: white;
-            border: none;
+            border: solid 1px black;
+            border-radius: 5px;
         }
 
         .contact_section {
-            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
             height: 80%;
         }
 
         .hidden {
             display: none;
         }
+
+        .contact_footer {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        .contact_footer button {
+          margin: 0 10px;
+        }
     </style>
-    <div class="modal_container">
+    <div class="modal_container hidden">
         <div class="modal_window"></div>
+
+        <div class="contact_window hidden">
+          <div class="conatct_header">
+            <button class="x_btn btn">x</button>
+          </div>
+          <div class="contact_section"></div>
+          <div class="contact_footer">
+            <button class="message_btn btn">메세지</button>
+            <button class="call_btn btn">전화</button>
+          </div>
+        </div>
     </div>
 
     <table class="table table-bordered">
         <tbody>
         <tr>
-            <td colspan="2">월세 200 / {{ data.first.rent_amount }}원</td>
+            <td colspan="2">월세 200 / {{ data.firt.rent_amount }}원</td>
             <td colspan="2">면적 10평</td>
             <td colspan="6">40만원
-                <button type="button" class="btn btn-outline-secondary show_contact"  style="float:right">연락처보기</button>
+                <button type="button" class="btn btn-outline-secondary contact_btn"  style="float:right">연락처보기</button>
             </td>
         </tr>
         <tr>
@@ -271,6 +296,35 @@
         </ul>
     </div>
     <script>
+        const modal_container = document.querySelector('.modal_container');
+        const contact_btn = document.querySelector('.contact_btn');
+        const contact_window = document.querySelector('.contact_window');
+        const contact_section = document.querySelector('.contact_section');
+        const x_btn = document.querySelector('.x_btn');
 
+        let contact = '010 - 1111- 2222';
+        contact_section.textContent = contact;
+
+        // Modal 배경 토글
+        function toggleModal() {
+          modal_container.classList.toggle('hidden');
+        }
+
+        // 연락처 창 토글
+        function toggleContact() {
+          contact_window.classList.toggle('hidden');
+        }
+
+        // 연락처 보기 버튼 Event 등록
+        contact_btn.addEventListener('click', () => {
+          toggleModal();
+          toggleContact();
+        })
+
+        // 연락처 x 버튼 Evnet 등록
+        x_btn.addEventListener('click', () => {
+          toggleModal();
+          toggleContact();
+        });
     </script>
 {% endblock %}
