oneroom detail css파일 분리

--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -1,175 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <link rel="stylesheet" href="{% static 'oneroom/oneroom_detail.css' %}">
     <style>
-        td {
-            width: 12.5%;
-        }
 
-        .roomImageContainer {
-            height: 400px;
-            box-sizing: border-box;
-        }
-
-        .roomImage {
-            border: solid 1px black;
-            float: left;
-            width: 50%;
-            height: 50%;
-
-            text-align: center;
-            line-height: 200px;
-        }
-
-        .option, .facility {
-            margin-top: 80px;
-        }
-
-        .option_title {
-            text-align: center;
-        }
-
-        .option_list {
-            margin: 0 auto;
-            height: 300px;
-            width: 80%;
-            border: 1px solid black;
-        }
-
-        .facility_title {
-            text-align: center;
-        }
-
-        .facility_list {
-            margin: 0 auto;
-            width: 80%;
-            height: 300px;
-            border: 1px solid black;
-        }
-
-        /* REVIEW */
-        .review {
-            margin: 80px auto 0;
-            border: 1px solid black;
-            width: 80%;
-            height: 300px;
-        }
-
-        .review_header {
-            height: 80px;
-            border-bottom: 1px solid black;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .review_title {
-            display: inline-block;
-            width: 150px;
-
-        }
-
-        .review_write {
-            display: inline-block;
-            border: 1px solid black;
-            width: 150px;
-            text-align: center;
-        }
-
-        .review_li {
-            border-bottom: 1px solid black;
-        }
-
-        /* PAGINATION */
-        .pagination {
-            margin: 0 auto;
-            text-align: center;
-            width: 80%;
-            height: 50px;
-        }
-
-        /* 다른방 둘러보기 */
-        .another_rooms {
-            margin: 0 auto 50px;
-            width: 80%;
-        }
-
-        .title {
-            text-align: center;
-            margin: 10px 0;
-        }
-
-        .another_rooms_ul {
-            display: flex;
-        }
-
-        .another_rooms_li {
-            border: 1px solid black;
-            margin: 0 10px;
-
-        }
-
-        .another_rooms_img {
-            width: 80px;
-            height: 80px;
-        }
-
-         /* MODAL */
-        .modal_window {
-            position: fixed;
-            top: 0;
-            width: 100vw;
-            height: 100vh;
-            background-color: black;
-
-            opacity: 0.7;
-        }
-
-        /* CONTACT */
-        .contact_window {
-            width: 250px;
-            height: 300px;
-            background-color: white;
-            position: fixed;
-            z-index: 3;
-            top: 30%;
-            left: 45%;
-            border-radius: 5px;
-        }
-
-        .btn {
-            background-color: white;
-            border: solid 1px black;
-            border-radius: 5px;
-        }
-
-        .contact_section {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            height: 80%;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .contact_footer {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-
-        .contact_footer button {
-          margin: 0 10px;
-        }
     </style>
+
     <div class="modal_container hidden">
         <div class="modal_window"></div>
 
         <div class="contact_window hidden">
-          <div class="conatct_header">
+          <div class="contact_header">
             <button class="x_btn btn">x</button>
           </div>
           <div class="contact_section"></div>
