--- a/templates/common/mypage.html
+++ b/templates/common/mypage.html
@@ -2,5 +2,26 @@
 {% load static %}
 
 {% block content %}
+    <style>
+        h3{
+            border-bottom: 1px solid black;
+        }
+    </style>
+    <div>
+        <h3>마이페이지</h3>
+    </div>
+    <div class="container">
+        <div>
 
+        </div>
+        <div class="sidebar">
+            마이페이지
+            중고거래
+            커뮤니티
+            ···
+        </div>
+        <div class="main">
+            내용
+        </div>
+    </div>
 {% endblock %}
