--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="review_write_body">
                     <textarea placeholder="리뷰를 작성해 주세요."></textarea>
+                    <input type="file" value="+">
                 </div>
                 <div class="review_write_footer">
                     <button class="review_write_btn">리뷰 등록</button>
