--- a/static/nav.css
+++ b/static/nav.css
@@ -1,3 +1,4 @@
+/* RESET */
 body {
     margin: 0;
 }
@@ -14,12 +15,14 @@ a {
 
 /* Nav Bar */
 nav {
-    padding: 15px 0;
+
+    height: 6vh;
     border-bottom: solid black 2px;
     background-color: darkorange;
 }
 
 .nav_list{
+    line-height: 6vh;
     display: inline-block;
     font-weight: bold;
     font-size: 20px;
@@ -32,14 +35,14 @@ nav {
 }
 
 .mypage {
-    line-height: 32px;
+    line-height: 6vh;
     display: inline-block;
     float: right;
     margin-right: 20px;
 }
 
 .signup {
-    line-height: 32px;
+    line-height: 6vh;
     display: inline-block;
     float: right;
     margin-right: 30px;
