--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -159,7 +159,7 @@
             return `
                     <a onclick="location.href=${info.id}">
                         <li>
-                            <div style="margin-right:30px"><img width="80px" height="80ox" src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markers_sprites2.png" alt="This is a preview image of the room."></div>
+                            <div style="margin: 0 30px"><img width="80px" height="80ox" src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markers_sprites2.png" alt="This is a preview image of the room."></div>
                             <div>
                                 <p>
                                     <h3>${info.title}</h3>
